Add a function generation_for_css border radius

--- a/beginner-html-site-styled-gh-pages/scss/style.scss
+++ b/beginner-html-site-styled-gh-pages/scss/style.scss
@@ -2,3 +2,9 @@ h3 {
     font-size: 7em sans-serif;
     color: red;
 }
+
+#block_example {
+    width: 250px;
+    height: 100px;
+    background: green;
+}
