--- a/beginner-html-site-styled-gh-pages/scss/style.css
+++ b/beginner-html-site-styled-gh-pages/scss/style.css
@@ -2,4 +2,10 @@ h3 {
   font-size: 7em sans-serif;
   color: red;
 }
+
+#block_example {
+  width: 250px;
+  height: 100px;
+  background: green;
+}
 /*# sourceMappingURL=style.css.map */
