--- a/beginner-html-site-styled-gh-pages/scss/style.css
+++ b/beginner-html-site-styled-gh-pages/scss/style.css
@@ -72,4 +72,31 @@ nav .menu_item .submenu {
 .tab-content.active {
   display: block;
 }
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: black;
+}
+
+.modal .modal_content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 80%;
+}
+
+.modal .modal_content .close_modal_window {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
 /*# sourceMappingURL=style.css.map */
