Add menu, menu is open down onclick

--- a/beginner-html-site-styled-gh-pages/scss/style.css
+++ b/beginner-html-site-styled-gh-pages/scss/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 h3 {
   font-size: 7em sans-serif;
   color: red;
@@ -98,5 +99,26 @@ nav .menu_item .submenu {
   float: right;
   font-size: 28px;
   font-weight: bold;
+}
+
+.menu ul {
+  margin: 0;
+  list-style: none;
+  padding-left: 20px;
+  display: none;
+}
+
+.menu .title::before {
+  content: '▶ ';
+  font-size: 80%;
+  color: green;
+}
+
+.menu.open .title::before {
+  content: '▼ ';
+}
+
+.menu.open ul {
+  display: block;
 }
 /*# sourceMappingURL=style.css.map */
