Add function close 3  window with {x}

--- a/beginner-html-site-styled-gh-pages/scss/style.css
+++ b/beginner-html-site-styled-gh-pages/scss/style.css
@@ -121,4 +121,31 @@ nav .menu_item .submenu {
 .menu.open ul {
   display: block;
 }
+
+#messages-container h3 {
+  font-size: 7em sans-serif;
+  color: blue;
+}
+
+#messages-container .pane {
+  background: #edf5e1;
+  padding: 10px 20px 10px;
+  border-top: solid 2px #c4df9b;
+  position: relative;
+  width: 40%;
+}
+
+#messages-container .pane .remove-button {
+  cursor: pointer;
+  position: absolute;
+  font-size: 110%;
+  top: 0;
+  color: darkred;
+  right: 10px;
+  display: block;
+  width: 24px;
+  height: 24px;
+  border: none;
+  background: transparent;
+}
 /*# sourceMappingURL=style.css.map */
